Fixed issue with navigation menu not showing up on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -163,7 +163,6 @@ nav {
     right: 5%;
     top: 0;
     padding: 5px;
-    border-radius: 5px;
     transition: background var(--hover-transition-time);
 }
 
